--- a/packages/primitives/package.json
+++ b/packages/primitives/package.json
@@ -33,7 +33,7 @@
   },
   "dependencies": {
     "@expo/html-elements": "^0.3.1",
-    "@universal-labs/core": "workspace:*"
+    "@universal-labs/core": "*"
   },
   "devDependencies": {
     "@types/react": "~18.0.27",
