--- a/packages/tailwind-ui/package.json
+++ b/packages/tailwind-ui/package.json
@@ -39,8 +39,8 @@
     "@radix-ui/react-dialog": "^1.0.2",
     "@react-native-picker/picker": "^2.4.8",
     "@tanstack/react-table": "^8.7.9",
-    "@universal-labs/core": "workspace:*",
-    "@universal-labs/primitives": "workspace:*",
+    "@universal-labs/core": "*",
+    "@universal-labs/primitives": "*",
     "class-variance-authority": "0.4.0",
     "clsx": "^1.2.1"
   },
