--- a/package.json
+++ b/package.json
@@ -33,48 +33,55 @@
       "path": "cz-conventional-changelog"
     }
   },
-  "resolutions": {
-    "@types/react": "18.0.27",
-    "react": "18.2.0",
-    "react-devtools-core": "~4.25.0",
-    "react-dom": "18.2.0",
-    "react-native-web": "0.18.10",
-    "uuid": "^3.4.0"
-  },
   "dependencies": {
-    "@changesets/cli": "^2.26.0"
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.14.5",
     "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.26.0",
+    "@nrwl/cypress": "15.8.5",
+    "@nrwl/eslint-plugin-nx": "15.8.5",
+    "@nrwl/jest": "15.8.5",
+    "@nrwl/js": "15.8.5",
+    "@nrwl/linter": "15.8.5",
     "@nrwl/nx-cloud": "latest",
-    "@swc/plugin-styled-components": "^1.5.40",
-    "@trivago/prettier-plugin-sort-imports": "^4.0.0",
-    "@types/node": "16.11.7",
+    "@nrwl/react": "15.8.5",
+    "@nrwl/vite": "15.8.5",
+    "@nrwl/workspace": "15.8.5",
+    "@nxext/vite": "15.1.0",
+    "@testing-library/react": "14.0.0",
+    "@types/jest": "^29.4.0",
+    "@types/node": "18.14.2",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
-    "@vitejs/plugin-react-swc": "^3.1.0-beta.2",
-    "@vue/compiler-sfc": "^3.2.47",
-    "commitizen": "^4.3.0",
-    "cypress": "^12.7.0",
-    "cz-conventional-changelog": "^3.3.0",
-    "cz-lerna-changelog": "^2.0.3",
+    "@vitejs/plugin-react": "^3.0.0",
+    "@vitest/coverage-c8": "~0.25.8",
+    "@vitest/ui": "^0.25.8",
+    "c8": "^7.12.0",
+    "cypress": "^12.2.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jsx-a11y": "6.6.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "7.31.11",
-    "eslint-plugin-react-hooks": "4.6.0",
-    "eslint-plugin-unused-imports": "1.1.5",
+    "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.4.1",
+    "jsdom": "~20.0.3",
     "nx": "15.8.5",
     "prettier": "^2.8.3",
     "prettier-plugin-tailwindcss": "^0.2.2",
-    "semantic-release": "^19.0.5",
+    "react-test-renderer": "18.2.0",
+    "ts-jest": "^29.0.5",
+    "ts-node": "10.9.1",
     "tslib": "^2.3.0",
-    "typescript": "^4.9.4",
-    "vite": "^4.1.1",
-    "vitest": "^0.28.3"
+    "typescript": "~4.9.5",
+    "vite": "^4.0.1",
+    "vite-plugin-dts": "~1.7.1",
+    "vite-plugin-eslint": "^1.8.1",
+    "vite-tsconfig-paths": "^4.0.2",
+    "vitest": "^0.25.8",
+    "vitest-preview": "latest"
   },
   "packageManager": "yarn@1.22.19"
 }
