--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -39,7 +39,7 @@
   },
   "dependencies": {
     "@paralleldrive/cuid2": "^2.2.0",
-    "@universal-labs/native-tailwind": "^1.3.0",
+    "@universal-labs/tailwind-adapter": "*",
     "clsx": "^1.2.1",
     "css-to-react-native": "^3.1.0",
     "immer": "^9.0.19",
