--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -32,6 +32,7 @@
   "scripts": {
     "build": "vite build && vite build -c tailwind.vite.config.ts",
     "dev": "yarn vite build -c tailwind.vite.config.ts && yarn vite build -w",
+    "lint": "eslint \"./**/*.{ts,tsx}\"",
     "prepare": "yarn build",
     "test": "vitest",
     "test:run": "vitest run",
