--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "expo:ios": "lerna run ios --scope expo-app",
     "expo:start": "lerna run start --scope expo-app",
     "lint": "lerna run lint --scope=\"@universal-labs/**\"",
-    "release": "lerna run build --scope=\"@universal-labs/**\" && yarn lerna publish --yes --force-publish",
+    "release": "lerna run build --scope=\"@universal-labs/**\" && yarn changeset publish",
     "test:e2e": "lerna run e2e",
     "version": "yarn install && git stage yarn.lock",
     "version-packages": "changeset version && yarn --mode=\"update-lockfile\"",
