--- a/package.json
+++ b/package.json
@@ -34,26 +34,15 @@
       "path": "cz-conventional-changelog"
     }
   },
-  "resolutions": {
-    "@types/react": "18.0.27",
-    "react": "18.2.0",
-    "react-devtools-core": "~4.25.0",
-    "react-dom": "18.2.0",
-    "react-native-web": "0.18.10",
-    "uuid": "^3.4.0"
-  },
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.26.0",
-    "@swc/plugin-styled-components": "^1.5.40",
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
-    "@vitejs/plugin-react-swc": "^3.1.0-beta.2",
     "@vue/compiler-sfc": "^3.2.47",
     "commitizen": "^4.3.0",
-    "cypress": "^12.7.0",
     "cz-conventional-changelog": "^3.3.0",
     "cz-lerna-changelog": "^2.0.3",
     "eslint": "~8.15.0",
@@ -67,12 +56,8 @@
     "lerna": "^6.5.1",
     "prettier": "^2.8.3",
     "prettier-plugin-tailwindcss": "^0.2.2",
-    "semantic-release": "^19.0.5",
     "tslib": "^2.3.0",
-    "turbo": "^1.7.2",
-    "typescript": "^4.9.4",
-    "vite": "^4.1.1",
-    "vitest": "^0.28.3"
+    "typescript": "^4.9.4"
   },
   "packageManager": "yarn@3.4.1"
 }
