--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -11,6 +11,6 @@
     "types": ["node"],
     "importHelpers": true
   },
-  "include": ["./src", "env.d.ts"],
+  "include": ["./src"],
   "exclude": ["**/__mocks__/*", "**/__tests__/*", "**/__stories__/*", "**/build/*"]
 }
