--- a/packages/tailwind-ui/package.json
+++ b/packages/tailwind-ui/package.json
@@ -25,6 +25,13 @@
   "main": "./build/index.umd.js",
   "module": "./build/index.es.js",
   "types": "./src/index.ts",
+  "files": [
+    "src",
+    "build",
+    "LICENSE",
+    "CHANGELOG.md",
+    "README.md"
+  ],
   "scripts": {
     "build": "yarn vite build",
     "dev": "yarn vite build -w",
