--- a/packages/primitives/package.json
+++ b/packages/primitives/package.json
@@ -42,7 +42,8 @@
   },
   "dependencies": {
     "@expo/html-elements": "^0.3.1",
-    "@universal-labs/core": "workspace:*"
+    "@universal-labs/core": "workspace:*",
+    "@universal-labs/primitives": "workspace:*"
   },
   "devDependencies": {
     "@types/react": "~18.0.27",
