--- a/packages/tailwind-ui/package.json
+++ b/packages/tailwind-ui/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "author": "Cristhian Gutierrez",
   "sideEffects": false,
+  "type": "module",
   "exports": {
     ".": {
       "import": "./build/index.es.js",
