--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "workspaces": [
     "packages/*",
     "examples/*",
-    "apps/*",
-    "e2e/*"
+    "apps/*"
   ],
   "scripts": {
     "build:libs": "lerna run build --scope=\"@universal-labs/**\"",
