--- a/lerna.json
+++ b/lerna.json
@@ -6,7 +6,7 @@
   "changelog": true,
   "allowBranch": ["main", "next"],
   "npmClient": "yarn",
-  "scope": "@universal-labs",
+  "scope": "@universal-labs/*",
   "createRelease": "github",
   "loglevel": "verbose",
   "conventionalCommits": true,
