--- a/packages/sheets/package.json
+++ b/packages/sheets/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@universal-labs/primitives",
+  "name": "@universal-labs/stylesheets",
   "version": "1.3.1",
-  "description": "",
+  "description": "Stylesheets manager",
   "homepage": "https://github.com/react-universal/tailwind#readme",
   "bugs": {
     "url": "https://github.com/react-universal/tailwind/issues"
@@ -9,7 +9,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/react-universal/tailwind",
-    "directory": "packages/primitives"
+    "directory": "packages/stylesheets"
   },
   "license": "MIT",
   "author": "Cristhian Gutierrez",
@@ -28,35 +28,27 @@
   "files": [
     "src",
     "build",
-    "env.d.ts",
     "LICENSE",
     "CHANGELOG.md",
     "README.md"
   ],
   "scripts": {
-    "build": "yarn vite build",
-    "dev": "yarn vite build -w --force",
+    "build": "vite build",
+    "dev": "yarn vite build -w",
     "lint": "eslint \"./**/*.{ts,tsx}\"",
     "prepare": "yarn build",
-    "test": "yarn vite test"
+    "test": "vitest",
+    "test:run": "vitest run",
+    "test:ui": "vitest --ui"
   },
   "dependencies": {
-    "@expo/html-elements": "^0.3.1",
-    "@universal-labs/core": "workspace:*"
+    "@universal-labs/native-tailwind": "workspace:*"
   },
   "devDependencies": {
     "@types/react": "~18.0.27",
     "@types/react-dom": "~18.0.10",
     "@types/react-native": "0.70.7",
-    "tslib": "^2.3.0",
-    "vite": "^4.1.1"
-  },
-  "peerDependencies": {
-    "next": ">= 13.0.0",
-    "postcss": ">= 8.4",
-    "react-native": ">= 0.69.0",
-    "tailwindcss": "^3.2.4"
-  },
-  "gitHead": "a5c05d5ee9bc016aa01fc3a7cc03bddd46d1e634",
-  "react-native": "./src/index.ts"
+    "vite": "^4.1.1",
+    "vitest": "^0.28.3"
+  }
 }
