--- a/packages/native-tailwind/package.json
+++ b/packages/native-tailwind/package.json
@@ -40,7 +40,7 @@
     "CHANGELOG.md"
   ],
   "scripts": {
-    "build": "yarn vite build",
+    "build:tailwind": "vite build -c vite.tailwind.config.ts",
     "dev": "yarn vite build -w",
     "lint": "eslint \"./**/*.{ts,tsx}\"",
     "prepare": "yarn build",
