--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,16 +1,16 @@
 {
   "extends": "../../tsconfig.base",
   "compilerOptions": {
-    "outDir": "./build",
-    "rootDir": "./src",
-    "jsx": "react-jsx",
     "allowSyntheticDefaultImports": true,
-    "noImplicitAny": true,
-    "noUnusedLocals": false,
-    "module": "ESNext",
-    "types": ["node"],
-    "importHelpers": true
+    "importsNotUsedAsValues": "error",
+    "noImplicitAny": false,
+    "lib": ["dom", "esnext", "dom.iterable"],
+    "module": "esnext",
+    "moduleResolution": "node",
+    "noEmit": true,
+    "strict": true,
+    "stripInternal": true,
+    "target": "esnext"
   },
-  "include": ["./src"],
-  "exclude": ["**/__mocks__/*", "**/__tests__/*", "**/__stories__/*", "**/build/*"]
+  "include": ["src", "types.d.ts", "index.d.ts"]
 }
