--- a/packages/sheets/package.json
+++ b/packages/sheets/package.json
@@ -42,7 +42,7 @@
     "test:ui": "vitest --ui"
   },
   "dependencies": {
-    "@universal-labs/native-tailwind": "workspace:*"
+    "@universal-labs/core": "workspace:*"
   },
   "devDependencies": {
     "@types/react": "~18.0.27",
