--- a/packages/styled/package.json
+++ b/packages/styled/package.json
@@ -45,21 +45,14 @@
   },
   "dependencies": {
     "@universal-labs/stylesheets": "workspace:*",
-    "clsx": "^1.2.1",
-    "css-to-react-native": "^3.1.0",
-    "immer": "^9.0.19",
-    "react-is": "^18.2.0",
-    "react-native-uuid": "^2.0.1",
-    "use-sync-external-store": "^1.2.0"
+    "react-is": "^18.2.0"
   },
   "devDependencies": {
-    "@types/css-to-react-native": "^3.0.0",
     "@types/node": "16.11.7",
     "@types/react": "~18.0.27",
     "@types/react-dom": "~18.0.10",
     "@types/react-is": "^17.0.3",
     "@types/react-native": "0.70.7",
-    "@types/use-sync-external-store": "^0.0.3",
     "@vitejs/plugin-react-swc": "^3.2.0",
     "@vitest/ui": "^0.28.3",
     "react": "18.2.0",
