--- a/examples/expo-app/package.json
+++ b/examples/expo-app/package.json
@@ -24,6 +24,7 @@
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-uuid": "^2.0.1",
     "react-native-web": "~0.18.10"
   },
   "devDependencies": {
