--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -26,8 +26,8 @@
       "types": "./index.d.ts"
     },
     "./tailwind-plugin": {
-      "import": "./build/tailwind/index.cjs.js",
-      "require": "./build/tailwind/index.cjs.js",
+      "import": "./build/tailwind/index.cjs",
+      "require": "./build/tailwind/index.cjs",
       "types": "./src/tailwind.ts"
     }
   },
