docs site first pages

--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -9,6 +9,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@mdx-js/loader": "^2.3.0",
+    "@mdx-js/react": "^2.3.0",
     "@next/font": "13.0.6",
     "@next/mdx": "13.2.4",
     "@universal-labs/primitives": "workspace:*",
