--- a/packages/sheets/package.json
+++ b/packages/sheets/package.json
@@ -56,5 +56,6 @@
     "@types/use-sync-external-store": "^0.0.3",
     "vite": "^4.1.1",
     "vitest": "^0.28.3"
-  }
+  },
+  "react-native": "./src/index.ts"
 }
