--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     }
   },
   "devDependencies": {
+    "@actions/core": "1.10.0",
+    "@actions/exec": "1.1.1",
+    "@actions/github": "5.1.1",
     "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.26.0",
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
