--- a/packages/primitives/package.json
+++ b/packages/primitives/package.json
@@ -34,7 +34,7 @@
     "README.md"
   ],
   "scripts": {
-    "build": "yarn vite build && yarn build:native",
+    "build": "yarn vite build",
     "build:native": "yarn vite build -c vite.native.config.ts",
     "dev": "yarn vite build -w --force",
     "lint": "eslint \"./**/*.{ts,tsx}\"",
@@ -42,7 +42,6 @@
     "test": "yarn vite test"
   },
   "dependencies": {
-    "@expo/html-elements": "^0.3.1",
     "@universal-labs/styled": "workspace:*"
   },
   "devDependencies": {
