--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,8 +2,6 @@ name: Release
 
 on:
   push:
-    tags-ignore:
-      - "**"
     branches:
       - main
 
@@ -25,20 +23,14 @@ jobs:
         
       - uses: fregante/setup-git-user@v1
       - name: Setup Node.js 16.x
+
         uses: actions/setup-node@v3
         with:
           node-version: 16.x
+          cache: yarn
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-
-      - name: Use cached node_modules
-        uses: actions/cache@v1
-        with:
-          path: node_modules
-          key: nodeModules-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            nodeModules-
 
       - name: Setup .yarnrc.yml
         run: |
@@ -50,22 +42,13 @@ jobs:
 
       - name: Install Dependencies
         run: yarn --immutable
-        env:
-          CI: true
-
-      - name: Publish & Release or Skip to Changesets
-        id: create_github_releases
-        uses: ./.github/actions/yarn-changeset-publish
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Create Release Pull Request or Publish to npm
         id: changesets
         uses: changesets/action@v1
         with:
           # This expects you to have a script called release which does a build for your packages and calls changeset publish
-          commit: "docs(changeset): changelogs and version bump"
-          version: yarn version
+          publish: yarn release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
