--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "expo:ios": "lerna run ios --scope expo-app",
     "expo:start": "lerna run start --scope expo-app",
     "lint": "lerna run lint --scope=\"@universal-labs/**\"",
-    "release": "lerna run build --scope=\"@universal-labs/**\" && yarn changeset publish",
+    "release": "lerna run build --scope=\"@universal-labs/**\" && yarn lerna version && yarn changeset publish",
     "test:e2e": "lerna run e2e",
-    "version": "yarn install && git stage yarn.lock",
     "version-packages": "changeset version && yarn --mode=\"update-lockfile\"",
+    "version:stage": "yarn install && git stage yarn.lock",
     "web": "lerna run dev --scope next-app"
   },
   "config": {
