adding tailwind plugins and preset for native

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -26,10 +26,15 @@
       "browser": "./build/index.umd.js",
       "types": "./index.d.ts"
     },
-    "./tailwind-plugin": {
-      "import": "./build/tailwind/index.cjs",
-      "require": "./build/tailwind/index.cjs",
-      "types": "./src/tailwind.ts"
+    "./tailwind/plugin": {
+      "import": "./build/tailwind-plugin.cjs",
+      "require": "./build/tailwind-plugin.cjs",
+      "types": "./src/tailwind/plugin/tailwind-plugin.ts"
+    },
+    "./tailwind/preset": {
+      "import": "./tailwind/preset.js",
+      "require": "./tailwind/preset.js",
+      "types": "./src/tailwind/preset/tailwind-preset.ts"
     }
   },
   "main": "./build/index.cjs.js",
@@ -40,7 +45,7 @@
     "src",
     "build",
     "index.d.ts",
-    "tailwind-plugin",
+    "tailwind",
     "types.d.ts",
     "LICENSE",
     "README.md",
