--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,3 +1,13 @@
+logFilters:
+  - code: YN0002
+    level: discard
+  - code: YN0060
+    level: discard
+  - code: YN0006
+    level: discard
+  - code: YN0076
+    level: discard
+
 nodeLinker: node-modules
 
 yarnPath: .yarn/releases/yarn-3.4.1.cjs
