--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -39,14 +39,13 @@
     "test:ui": "vitest --ui"
   },
   "dependencies": {
-    "@universal-labs/stylesheets": "workspace:*",
-    "react-is": "^18.2.0"
+    "dayjs": "^1.11.7",
+    "dayjs-plugin-calendar-sets": "^1.1.1"
   },
   "devDependencies": {
     "@types/node": "16.11.7",
     "@types/react": "~18.0.27",
     "@types/react-dom": "~18.0.10",
-    "@types/react-is": "^17.0.3",
     "@types/react-native": "0.70.7",
     "@vitejs/plugin-react-swc": "^3.2.0",
     "@vitest/ui": "^0.28.3",
@@ -57,11 +56,7 @@
     "vitest": "^0.28.3"
   },
   "peerDependencies": {
-    "postcss": ">= 8.0.0",
-    "react-native-gesture-handler": ">= 2.9.0",
-    "react-native-reanimated": ">=2.12.0",
-    "react-native-web": ">= 0.18.10",
-    "tailwindcss": ">= 3.0.0"
+    "react-native-web": ">= 0.18.10"
   },
   "gitHead": "a5c05d5ee9bc016aa01fc3a7cc03bddd46d1e634",
   "react-native": "./src/index.ts"
