--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -61,5 +61,6 @@
   "peerDependencies": {
     "react-native-web": ">= 0.18.10"
   },
-  "react-native": "./src/index.ts"
+  "react-native": "./src/index.ts",
+  "gitHead": "f6a5d43eb0bdd5e38613cb3a368d7754fbdcf57f"
 }
