--- a/packages/sheets/package.json
+++ b/packages/sheets/package.json
@@ -42,7 +42,7 @@
     "test:ui": "vitest --ui"
   },
   "dependencies": {
-    "@universal-labs/core": "workspace:*",
+    "@universal-labs/core": "1.4.8",
     "css-to-react-native": "^3.1.0",
     "immer": "^9.0.19",
     "react-native-uuid": "^2.0.1",
@@ -57,5 +57,6 @@
     "vite": "^4.1.1",
     "vitest": "^0.28.3"
   },
-  "react-native": "./src/index.ts"
+  "react-native": "./src/index.ts",
+  "gitHead": "f6a5d43eb0bdd5e38613cb3a368d7754fbdcf57f"
 }
