--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,11 +43,8 @@ jobs:
       - name: Install Dependencies
         run: yarn --immutable
 
-      - name: Create Release Pull Request or Publish to npm
-        id: changesets
-        uses: changesets/action@v1
-        with:
-          # This expects you to have a script called release which does a build for your packages and calls changeset publish
+      - name: Create Release and Publish to npm
+        run: |
           publish: yarn release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
