--- a/packages/sheets/package.json
+++ b/packages/sheets/package.json
@@ -42,7 +42,7 @@
     "test:ui": "vitest --ui"
   },
   "dependencies": {
-    "@universal-labs/core": "^1.4.10",
+    "@universal-labs/core": "workspace:*",
     "css-to-react-native": "^3.1.0",
     "immer": "^9.0.19",
     "react-native-uuid": "^2.0.1",
@@ -57,6 +57,6 @@
     "vite": "^4.1.1",
     "vitest": "^0.28.3"
   },
-  "react-native": "./src/index.ts",
-  "gitHead": "4c26121d296e38153faa7dd196229db1a71e075d"
+  "gitHead": "4c26121d296e38153faa7dd196229db1a71e075d",
+  "react-native": "./src/index.ts"
 }
