--- a/packages/tailwind-ui/package.json
+++ b/packages/tailwind-ui/package.json
@@ -48,8 +48,8 @@
     "@radix-ui/react-dialog": "^1.0.2",
     "@react-native-picker/picker": "^2.4.8",
     "@tanstack/react-table": "^8.7.9",
-    "@universal-labs/core": "^1.4.10",
-    "@universal-labs/primitives": "^1.4.10",
+    "@universal-labs/core": "workspace:*",
+    "@universal-labs/primitives": "workspace:*",
     "class-variance-authority": "0.4.0",
     "clsx": "^1.2.1",
     "dayjs": "^1.11.7",
