feat(nx): nx fix

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,29 +1,31 @@
 name: Release
 
 on:
+  workflow_run:
+    workflows: ["Health Check"]
+    types:
+      - completed
   push:
     branches:
-      - main
+      - "main"
 
-permissions: {}
+concurrency: ${{ github.workflow }}-${{ github.ref }}
+
 jobs:
   release:
-    permissions:
-      contents: write # to create release 
-      issues: write # to post issue comments
-      pull-requests: write # to create pull request 
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
 
     name: Release
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
         
       - uses: fregante/setup-git-user@v1
-      - name: Setup Node.js 16.x
 
+      - name: Setup Node.js 16.x
         uses: actions/setup-node@v3
         with:
           node-version: 16.x
@@ -47,7 +49,6 @@ jobs:
         id: changesets
         uses: changesets/action@v1
         with:
-          # This expects you to have a script called release which does a build for your packages and calls changeset publish
           publish: yarn release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
