feat(nx): nx fix

--- a/.github/workflows/health.yml
+++ b/.github/workflows/health.yml
@@ -16,6 +16,14 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+    
+      - name: Setup .yarnrc.yml
+        run: |
+          yarn config set npmAuthToken $NPM_TOKEN -H
+          yarn config set npmAlwaysAuth true -H
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - run: yarn --immutable
       - run: yarn build:libs
