--- a/packages/sheets/package.json
+++ b/packages/sheets/package.json
@@ -57,6 +57,10 @@
     "vite": "^4.1.1",
     "vitest": "^0.28.3"
   },
+  "publishConfig": {
+    "access": "public",
+    "directory": "_release/package"
+  },
   "gitHead": "4c26121d296e38153faa7dd196229db1a71e075d",
   "react-native": "./src/index.ts"
 }
