--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   ],
   "scripts": {
     "build:libs": "lerna run build --scope=\"@universal-labs/**\"",
+    "build:release": "yarn build:libs && yarn libs:foreach exec rm -rf _release && yarn libs:foreach pack && yarn libs:foreach exec \"mkdir _release && tar zxvf package.tgz --directory _release && rm package.tgz\"",
     "commit": "cz",
     "dev": "lerna run dev --scope=\"@universal-labs/**\" --parallel",
     "docs:build": "lerna run build --scope docs-page",
@@ -22,8 +23,10 @@
     "expo:android": "lerna run android --scope expo-app",
     "expo:ios": "lerna run ios --scope expo-app",
     "expo:start": "lerna run start --scope expo-app",
+    "format": "prettier --write packages apps examples \"**/*.{js,ts,tsx,md}\"",
+    "libs:foreach": "yarn workspaces foreach --no-private --verbose",
     "lint": "lerna run lint --scope=\"@universal-labs/**\"",
-    "release": "changeset publish",
+    "release": "yarn build:release && changeset publish",
     "test:e2e": "lerna run e2e",
     "version-packages": "changeset version && yarn --mode=\"update-lockfile\"",
     "version:stage": "yarn install && git stage yarn.lock",
