--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -87,5 +87,9 @@
   "engines": {
     "node": ">=16.0.0"
   },
+  "publishConfig": {
+    "access": "public",
+    "directory": "_release/package"
+  },
   "gitHead": "4c26121d296e38153faa7dd196229db1a71e075d"
 }
