--- a/packages/primitives/package.json
+++ b/packages/primitives/package.json
@@ -57,6 +57,10 @@
     "react-native": ">= 0.69.0",
     "tailwindcss": "^3.2.4"
   },
+  "publishConfig": {
+    "access": "public",
+    "directory": "_release/package"
+  },
   "gitHead": "4c26121d296e38153faa7dd196229db1a71e075d",
   "react-native": "./src/index.ts"
 }
