--- a/packages/styled/package.json
+++ b/packages/styled/package.json
@@ -68,6 +68,10 @@
     "react-native-web": ">= 0.18.10",
     "tailwindcss": ">= 3.0.0"
   },
+  "publishConfig": {
+    "access": "public",
+    "directory": "_release/package"
+  },
   "gitHead": "4c26121d296e38153faa7dd196229db1a71e075d",
   "react-native": "./src/index.ts"
 }
