--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,6 +14,10 @@
     "strictPropertyInitialization": true,
     "strictFunctionTypes": true,
     "noImplicitThis": true,
+    "noFallthroughCasesInSwitch": true,
+    "allowJs": false,
+    "noUncheckedIndexedAccess": true,
+    "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
     "module": "esnext",
     "emitDecoratorMetadata": true,
@@ -25,5 +29,5 @@
     "skipDefaultLibCheck": true
   },
   "include": ["types.d.ts"],
-  "exclude": ["tmp", "node_modules"]
+  "exclude": ["tmp", "node_modules", "**/build**"]
 }
