--- a/packages/tailwind-ui/package.json
+++ b/packages/tailwind-ui/package.json
@@ -58,6 +58,7 @@
     "@types/react": "~18.0.27",
     "@types/react-dom": "~18.0.10",
     "@types/react-native": "0.70.7",
+    "@universal-labs/stylesheets": "workspace:*",
     "cypress": "^12.7.0",
     "react-native-svg": ">= 12",
     "tslib": "^2.3.0",
