--- a/packages/tailwind-ui/package.json
+++ b/packages/tailwind-ui/package.json
@@ -60,6 +60,8 @@
     "@types/react-native": "0.70.7",
     "@universal-labs/stylesheets": "workspace:*",
     "cypress": "^12.7.0",
+    "react-hot-toast": "^2.4.0",
+    "react-native-modal-datetime-picker": "^14.0.1",
     "react-native-svg": ">= 12",
     "tslib": "^2.3.0",
     "vite": "^4.1.1"
