--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -58,8 +58,7 @@
     "postcss": "8.4.21",
     "postcss-color-rgb": "^2.0.0",
     "postcss-css-variables": "^0.18.0",
-    "postcss-js": "^4.0.0",
-    "postcss-rem-to-pixel": "^4.1.2"
+    "postcss-js": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "16.11.7",
