--- a/packages/primitives/package.json
+++ b/packages/primitives/package.json
@@ -25,7 +25,6 @@
   "module": "./build/index.es.js",
   "types": "./src/index.ts",
   "files": [
-    "src",
     "build",
     "env.d.ts",
     "LICENSE",
@@ -33,7 +32,7 @@
     "README.md"
   ],
   "scripts": {
-    "build": "yarn vite build",
+    "build": "yarn vite build && yarn build:native",
     "build:native": "yarn vite build -c vite.native.config.ts",
     "dev": "yarn vite build -w --force",
     "lint": "eslint \"./**/*.{ts,tsx}\"",
@@ -50,15 +49,12 @@
     "vite": "^4.1.1"
   },
   "peerDependencies": {
-    "next": ">= 13.0.0",
-    "postcss": ">= 8.4",
-    "react-native": ">= 0.69.0",
-    "tailwindcss": "^3.2.4"
+    "react-native": ">= 0.69.0"
   },
   "publishConfig": {
     "access": "public",
     "directory": "_release/package"
   },
   "gitHead": "4c26121d296e38153faa7dd196229db1a71e075d",
-  "react-native": "./src/index.ts"
+  "react-native": "./build/index.native.es.js"
 }
