--- a/packages/styled/package.json
+++ b/packages/styled/package.json
@@ -34,7 +34,7 @@
     "build"
   ],
   "scripts": {
-    "build": "vite build",
+    "build": "vite build && yarn build:native",
     "build:native": "vite build -c vite.native.config.ts",
     "dev": "yarn build",
     "lint": "eslint \"./**/*.{ts,tsx}\"",
@@ -61,16 +61,12 @@
     "vitest": "^0.28.3"
   },
   "peerDependencies": {
-    "postcss": ">= 8.0.0",
-    "react-native-gesture-handler": ">= 2.9.0",
-    "react-native-reanimated": ">=2.12.0",
-    "react-native-web": ">= 0.18.10",
-    "tailwindcss": ">= 3.0.0"
+    "react-native-web": ">= 0.18.10"
   },
   "publishConfig": {
     "access": "public",
     "directory": "_release/package"
   },
   "gitHead": "4c26121d296e38153faa7dd196229db1a71e075d",
-  "react-native": "./src/index.ts"
+  "react-native": "./build/index.native.es.js"
 }
