--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "libs:foreach": "yarn workspaces foreach --no-private --verbose",
     "lint": "lerna run lint --scope=\"@universal-labs/**\"",
     "release": "yarn build:release && changeset publish",
+    "test": "yarn lerna run test",
     "test:e2e": "lerna run e2e",
     "version-packages": "changeset version && yarn --mode=\"update-lockfile\"",
     "version:stage": "yarn install && git stage yarn.lock",
